ws_check.log
    Checking tx_di_sa_token v0.1.0 (C:\a_me\proj\rust\tx_di\plugins\tx_di_sa_token)
    Checking admin_infra v0.1.0 (C:\a_me\proj\rust\tx_di\examples\tx_admin\admin_infra)
    Checking dfbja7_transformer v0.1.0 (C:\a_me\proj\rust\tx_di\examples\dfbja7_transformer)
error[E0432]: unresolved imports `tx_di_core::tx_comp`, `tx_di_core::CompInit`
 --> examples\dfbja7_transformer\src\config.rs:3:18
  |
3 | use tx_di_core::{tx_comp, CompInit};
  |                  ^^^^^^^  ^^^^^^^^ no `CompInit` in the root
  |                  |
  |                  no `tx_comp` in the root

error[E0432]: unresolved imports `tx_di_core::async_method`, `tx_di_core::CompInit`, `tx_di_core::tx_comp`
 --> examples\dfbja7_transformer\src\mqtt.rs:6:18
  |
6 | use tx_di_core::{async_method, App, CancellationToken, CompInit, RIE, tx_comp};
  |                  ^^^^^^^^^^^^                          ^^^^^^^^       ^^^^^^^ no `tx_comp` in the root
  |                  |                                     |
  |                  |                                     no `CompInit` in the root
  |                  no `async_method` in the root

error[E0432]: unresolved import `tx_di_core::tx_comp`
 --> examples\dfbja7_transformer\src\protocol\mod.rs:8:5
  |
8 | use tx_di_core::tx_comp;
  |     ^^^^^^^^^^^^^^^^^^^ no `tx_comp` in the root

error[E0432]: unresolved imports `tx_di_core::async_method`, `tx_di_core::CompInit`, `tx_di_core::tx_comp`
  --> examples\dfbja7_transformer\src\server.rs:11:18
   |
11 | use tx_di_core::{async_method, App, CancellationToken, CompInit, RIE, tx_comp};
   |                  ^^^^^^^^^^^^                          ^^^^^^^^       ^^^^^^^ no `tx_comp` in the root
   |                  |                                     |
   |                  |                                     no `CompInit` in the root
   |                  no `async_method` in the root

error: cannot find attribute `tx_cst` in this scope
  --> examples\dfbja7_transformer\src\mqtt.rs:17:7
   |
17 |     #[tx_cst(OnceLock::new())]
   |       ^^^^^^
   |
   = note: `tx_cst` is an attribute that can be used by the derive macro `Component`, you might be missing a `derive` attribute

error: cannot find attribute `tx_cst` in this scope
  --> examples\dfbja7_transformer\src\mqtt.rs:20:7
   |
20 |     #[tx_cst(Mutex::new(None))]
   |       ^^^^^^
   |
   = note: `tx_cst` is an attribute that can be used by the derive macro `Component`, you might be missing a `derive` attribute

warning: unused imports: `Event`, `MqttOptions`, and `Packet`
 --> examples\dfbja7_transformer\src\mqtt.rs:2:28
  |
2 | use rumqttc::{AsyncClient, Event, EventLoop, MqttOptions, Packet, QoS};
  |                            ^^^^^             ^^^^^^^^^^^  ^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `std::time::Duration`
 --> examples\dfbja7_transformer\src\mqtt.rs:4:5
  |
4 | use std::time::Duration;
  |     ^^^^^^^^^^^^^^^^^^^

warning: unused import: `error`
 --> examples\dfbja7_transformer\src\mqtt.rs:5:15
  |
5 | use tracing::{error, info};
  |               ^^^^^

warning: unused imports: `App` and `CancellationToken`
 --> examples\dfbja7_transformer\src\mqtt.rs:6:32
  |
6 | use tx_di_core::{async_method, App, CancellationToken, CompInit, RIE, tx_comp};
  |                                ^^^  ^^^^^^^^^^^^^^^^^

warning: unused import: `TcpListener`
 --> examples\dfbja7_transformer\src\server.rs:8:18
  |
8 | use tokio::net::{TcpListener, TcpStream};
  |                  ^^^^^^^^^^^

warning: unused imports: `App` and `CancellationToken`
  --> examples\dfbja7_transformer\src\server.rs:11:32
   |
11 | use tx_di_core::{async_method, App, CancellationToken, CompInit, RIE, tx_comp};
   |                                ^^^  ^^^^^^^^^^^^^^^^^

warning: unused doc comment
   --> examples\dfbja7_transformer\src\server.rs:183:5
    |
183 |     /// 在 async_run 阶段启动 TCP 监听循环
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ rustdoc does not generate documentation for macro invocations
    |
    = help: to document an item produced by a macro, the macro must produce the documentation as part of its expansion
    = note: `#[warn(unused_doc_comments)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0432`.
warning: `dfbja7_transformer` (bin "dfbja7_transformer") generated 7 warnings
error: could not compile `dfbja7_transformer` (bin "dfbja7_transformer") due to 6 previous errors; 7 warnings emitted
warning: build failed, waiting for other jobs to finish...
